--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
- "scripts": {
-  "dev": "nodemon --watch src --exec ts-node src/index.ts",
-  "build": "tsc",
-  "start": "node dist/index.js"
-},
+  "scripts": {
+    "dev": "nodemon --watch src --exec ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "seed": "npx ts-node prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -14,12 +15,15 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "@fastify/type-provider-typebox": "^5.1.0",
+    "@prisma/client": "^6.11.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.0",
     "fastify": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.13",
     "nodemon": "^3.1.10",
+    "prisma": "^6.11.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
