--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
+    "@fastify/formbody": "^8.0.2",
     "@fastify/type-provider-typebox": "^5.1.0",
     "@prisma/client": "^6.11.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.0",
-    "fastify": "^5.4.0"
+    "fastify": "^5.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.13",
     "nodemon": "^3.1.10",
     "prisma": "^6.11.1",
