--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,6 +8,11 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "baseUrl": "./src",
+    "paths": {
+      "@/*": [
+        "./*"
+      ]
+    },
     "types": [
       "node"
     ]
