--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
     "@fastify/formbody": "^8.0.2",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@fastify/type-provider-typebox": "^5.1.0",
     "@prisma/client": "^6.11.1",
     "bcryptjs": "^3.0.2",
