--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,11 @@
     "@fastify/type-provider-typebox": "^5.1.0",
     "@prisma/client": "^6.11.1",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.56.4",
     "dotenv": "^17.2.0",
     "fastify": "^5.4.0",
+    "firebase-admin": "^13.4.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "tsconfig-paths": "^4.2.0",
     "zod": "^4.0.5"
