--- a/backend/package.json
+++ b/backend/package.json
@@ -16,17 +16,20 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
     "@fastify/formbody": "^8.0.2",
+    "@fastify/multipart": "^9.0.3",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
     "@fastify/type-provider-typebox": "^5.1.0",
     "@prisma/client": "^6.11.1",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.56.4",
+    "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
     "fastify": "^5.4.0",
     "firebase-admin": "^13.4.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "tailwind": "^4.0.0",
     "tsconfig-paths": "^4.2.0",
     "zod": "^4.0.5"
   },
