--- a/backend/package.json
+++ b/backend/package.json
@@ -26,11 +26,13 @@
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
     "fastify": "^5.4.0",
-    "firebase-admin": "^13.4.0",
+    "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "tailwind": "^4.0.0",
     "tsconfig-paths": "^4.2.0",
+    "twilio": "^5.9.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
