--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "firebase-admin": "^13.5.0",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.6",
     "tailwind": "^4.0.0",
     "tsconfig-paths": "^4.2.0",
     "twilio": "^5.9.0",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.13",
+    "@types/nodemailer": "^7.0.1",
     "nodemon": "^3.1.10",
     "prisma": "^6.11.1",
     "ts-node": "^10.9.2",
