--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6",
+    "razorpay": "^2.9.6",
     "tailwind": "^4.0.0",
     "tsconfig-paths": "^4.2.0",
     "twilio": "^5.9.0",
