--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@fastify/swagger-ui": "^5.2.3",
     "@fastify/type-provider-typebox": "^5.1.0",
     "@prisma/client": "^6.11.1",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.56.4",
     "cloudinary": "^2.7.0",
@@ -38,6 +39,7 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.13",
     "@types/nodemailer": "^7.0.1",
